--- a/style.css
+++ b/style.css
@@ -8,27 +8,48 @@ body{
 
 header{
     background: #ebebeb;
+    text-align: center;
+    
+    
 
 }
 
 nav {
     background: #ebebeb;
+    text-align: center;
 }
 
 section{
     background: #ebebeb;
     width: 495px;
+    text-align: center;
 }
 
 aside{
     background: #ebebeb;
+    text-align: center;
+    float: right;
+    width:450px;
 }
 
 footer{
     background: #ebebeb;
+    text-align: center;
+    
 }
 
 article{
     color: #ebebeb;
     background: #777;
+    text-align: center;
+}
+
+h1{
+    color: #777;
+    background: #ebebeb;
+}
+
+p{
+    color: #777;
+    background: #ebebeb;
 }
