--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777;
@@ -9,19 +13,22 @@ body{
 header{
     background: #ebebeb;
     text-align: center;
+     
     
     
 
 }
 
 nav {
-    background: #ebebeb;
-    text-align: center;
+   background: #ebebeb;
+   text-align: center;
+    
 }
 
 section{
     background: #ebebeb;
     width: 495px;
+    height: 320px;
     text-align: center;
 }
 
