--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-*{
-    box-sizing: border-box;
-}
+
 
 body{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -13,15 +11,17 @@ body{
 header{
     background: #ebebeb;
     text-align: center;
-     
+    line-height: 90px;
     
-    
+   
 
 }
 
 nav {
    background: #ebebeb;
    text-align: center;
+   line-height: 90px;
+
     
 }
 
@@ -30,6 +30,8 @@ section{
     width: 495px;
     height: 320px;
     text-align: center;
+    display: block;
+    position: relative
 }
 
 aside{
@@ -37,11 +39,13 @@ aside{
     text-align: center;
     float: right;
     width:450px;
+    height: 320px;
 }
 
 footer{
     background: #ebebeb;
     text-align: center;
+    line-height: 90px;
     
 }
 
@@ -49,6 +53,12 @@ article{
     color: #ebebeb;
     background: #777;
     text-align: center;
+    height: 220px;
+    width: 400px;
+    position: absolute;
+    margin: 45px;
+    
+    
 }
 
 h1{
